# lw_runtime

./: a.sh
libraries/lwblas/: CMakeLists.txt  Dockerfile  Makefile  Makefile.dvs  Makefile.standalone  lwblas.mk
libraries/lwblas/benchmark/: gemv.py  lwdnn.sh  plot.py
libraries/lwblas/cmake/: DownloadGoogleBenchmark.cmake  DownloadGoogleTest.cmake  aarch64.toolchain  liblwtensor-internal.map  liblwtensor.def  liblwtensor.map  lwca10.1-aarch64.toolchain  lwca10.1-ppc64le.toolchain  lwca10.2-aarch64.toolchain  lwca10.2-ppc64le.toolchain  lwca11-aarch64.toolchain  lwca11-ppc64le.toolchain  lwca11.0-aarch64.toolchain  lwca11.0-ppc64le.toolchain  lwca11.1-aarch64.toolchain  lwca11.1-ppc64le.toolchain  lwca11.2-aarch64.toolchain  lwca11.2-ppc64le.toolchain  ppc64le.toolchain  sources.cmake
libraries/lwblas/core/: consistencyCheckerPLC3.lw  elementwise.lw  elementwiseInt8WithScalingPLC3.lw  elementwiseMixedInt8PLC3.lw  elementwiseMixedRealPLC3.lw  elementwisePLC3.lw  elementwiseUniPrecisionPLC3.lw  lwtensor.cpp  types.cpp  typesPLC3.cpp  util.cpp  utilPLC3.cpp
libraries/lwblas/doc/: CMakeLists.txt
libraries/lwblas/doc/lwtensor/: CMakeLists.txt  Doxyfile  Makefile  conf.py  download.rst  getting_started.rst  index.rst  library_types.h  license.rst  plan_cache.rst  release_notes.rst  user_guide.rst
libraries/lwblas/doc/safety/: xml2md.sh
libraries/lwblas/examples/: colwolution.lw
libraries/lwblas/include/: lwtensor.h
libraries/lwblas/include/lwtensor/: types.h
libraries/lwblas/misc/: analyzeBenchmarks.py  candidateLwtlass.py  compileContraction.sh  contraction2.py  detectLocalMemoryUsage.py  generateContractionLwtlass.py  generateElementwise.py  generateSassFeatures.py  kernelAnalysis.py  lwtensorUtil.py  myColors.py  neurips.sh  plot.py  regression.py  regression_via_tags.py  release.py  selectData.py  selectKernels.py  tuneElementwise.sh
libraries/lwblas/misc/kernels/: ew.bbbb.sm61.kernels  ew.bbbs.sm70.kernels  ew.bbbs.sm75.kernels  ew.bbbs.sm80.kernels  ew.cccc.sm70.kernels  ew.cccc.sm75.kernels  ew.cccc.sm80.kernels  ew.dddd.sm70.kernels  ew.dddd.sm75.kernels  ew.dddd.sm80.kernels  ew.ddsd.sm61.kernels  ew.ddsd.sm80.kernels  ew.hhhh.sm70.kernels  ew.hhhh.sm75.kernels  ew.hhhh.sm80.kernels  ew.hhhs.sm61.kernels  ew.hhhs.sm70.kernels  ew.hhhs.sm75.kernels  ew.hhhs.sm80.kernels  ew.sshs.sm75.kernels  ew.ssss.sm70.kernels  ew.ssss.sm75.kernels  ew.ssss.sm80.kernels  ew.zzcz.sm61.kernels  tc.bbbs_tc.sm80.kernels  tc.cccc.sm70.kernels  tc.cccc.sm75.kernels  tc.cccc.sm80.kernels  tc.cccc_tc_tf32.sm80.kernels  tc.dddd.sm70.kernels  tc.dddd.sm75.kernels  tc.dddd.sm80.kernels  tc.ddds.sm70.kernels  tc.ddds.sm75.kernels  tc.hhhs_tc.sm70.kernels  tc.hhhs_tc.sm75.kernels  tc.hhhs_tc.sm80.kernels  tc.ssss.sm70.kernels  tc.ssss.sm75.kernels  tc.ssss_tc.sm70.kernels  (+4 more)
libraries/lwblas/release/: Doxyfile  Makefile  license.txt  release.sh
libraries/lwblas/src/: context.cpp  elementwise.lw  elementwise_auto.lw  elementwise_sm61.lw  elementwise_sm70.lw  elementwise_sm75.lw  elementwise_sm80.lw  heuristicEW.cpp  heuristicSimple.cpp  liblwtensor.map  lwtensor.cpp  reduction.lw  tensorColwolution.lw  tensorContraction.lw  tensorContraction_lwte_sm70_dddd.lw  tensorContraction_lwte_sm70_ssss.lw  tensorContraction_lwtlass_auto.lw  tensorContraction_sm61_cccc.lw  tensorContraction_sm61_dddd.lw  tensorContraction_sm61_ddds.lw  tensorContraction_sm61_dzzz.lw  tensorContraction_sm61_hhhs_tc.lw  tensorContraction_sm61_ssss.lw  tensorContraction_sm61_ssss_tc.lw  tensorContraction_sm61_zdzz.lw  tensorContraction_sm61_zzzc.lw  tensorContraction_sm61_zzzz.lw  tensorContraction_sm70_cccc.lw  tensorContraction_sm70_dddd.lw  tensorContraction_sm70_ddds.lw  tensorContraction_sm70_dzzz.lw  tensorContraction_sm70_hhhs_tc.lw  tensorContraction_sm70_ssss.lw  tensorContraction_sm70_ssss_tc.lw  tensorContraction_sm70_zdzz.lw  tensorContraction_sm70_zzzc.lw  tensorContraction_sm70_zzzz.lw  tensorContraction_sm75_cccc.lw  tensorContraction_sm75_dddd.lw  tensorContraction_sm75_ddds.lw  (+25 more)
libraries/lwblas/test/correctness/: coretest_testsuits.sh  createContractionTests.py  createElementwiseTests.py  createReductionTests.py  lwtensorContractionCacheL0.sh  lwtensorContractionCacheRepeat.sh  lwtensorContractionHighDimensionalL0.sh  lwtensorContractionHighDimensionalL1.sh  lwtensorContractionL0.sh  lwtensorContractionL1.sh  lwtensorContractionL2.sh  lwtensorContractionL3.sh  lwtensorElementwiseHighDimensionalL0.sh  lwtensorElementwiseL0.sh  lwtensorElementwiseL1.sh  lwtensorElementwiseL2.sh  lwtensorGemvBenchmark.sh  lwtensorReductionHighDimensionalL0.sh  lwtensorReductionL0.sh  lwtensorReductionL1.sh  lwtensorReductionL2.sh  lwtlass.sh  memcheck.sh
libraries/lwblas/test/googletest/: CMakeLists.txt
libraries/lwblas/test/regression/: regression.sh  run.py  testlist.json
libraries/lwblas/test/scripts/: README  lwtensorTest.label  lwtensorTest.layer  lwtensor_fwd_tests.trs  lwtensor_perf_tests.trs  lwtensor_run.py  lwtensor_tests.trs  lwtensor_tests_L2.trs
libraries/lwblas/test/src/: apiCoreEx.h  apiDevice.h  apiMaster.h  apiTest.h  apiTest.lw  benchmarkWorkspaceTest.lw  contraction_ref.h  debugKnowlWalueTest.lw  elementwise_ref.h  latencyTest.lw  lwtensorTest.lw  publicApiMaster.h  random_util.h  string_util.h  trash_util.h  unitTest.lw  util.h  wait_util.h
libraries/telecom/lwphy/master/: .clang-format  .gitlab-ci.yml  .gitmodules  CMakeLists.release.txt  CMakeLists.txt  Dockerfile  build_push_image.sh
libraries/telecom/lwphytools/master/: .gitattributes  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  build_script.sh  gen_config.json  lwphycontroller.yaml  lwphycontroller_altran.yaml  recv_config.json  recv_config_3p.json  recv_config_altran.json  recv_config_standalone.json  set_lwphy_tools_paths.sh
src/memory/lwmem/master/: CMakeLists.txt  LICENSE
src/mpi/opal/datatype/: Makefile.am  opal_colwertor.c  opal_colwertor.h  opal_colwertor_internal.h  opal_colwertor_raw.c  opal_copy_functions.c  opal_copy_functions_heterogeneous.c  opal_datatype.h  opal_datatype_add.c  opal_datatype_checksum.h  (+23 more)
(+32533 files in other folders)
